--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ torch-scatter = ["torch==2.4.1"]
 [tool.ruff]
 line-length = 120
 lint.select = [
+    "I",  # isort
     "F",  # pyflakes
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
